# CrewAI

./: .gitignore
marketing_ai/: .env  README.md  pyproject.toml
marketing_ai/src/marketing_ai/: crew.py  main.py
marketing_ai/src/marketing_ai/config/: agents.yaml  tasks.yaml
marketing_ai/src/marketing_ai/tools/: generate_pdf_tool.py
